move photo in centre

--- a/HTML/2ND TASK/index.html
+++ b/HTML/2ND TASK/index.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-    <h1>Our City</h1>
-    <center>
-        <h1>Motihari</h1>
-    </center>
+    <h1 align="center">Our City</h1>
+
+    <h1 align="center">Motihari</h1>
+
     <center>
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Kesariya-0.jpg" alt="motihar">
     </center>
