--- a/HTML/5TH TASK/index.html
+++ b/HTML/5TH TASK/index.html
@@ -2,21 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>Task 4</title>
+    <title>Task 5</title>
 </head>
-<style></style>
 
-<body style="background-image: url(./bg.jpg);font-weight: bold; font-style: oblique; font-size: larger;">
-    <h1 align="center"
-        style="background-color: darkgrey; text-decoration: underline; padding-top: 50px; padding-bottom: 50px;">OUR
-        CITY
-        MOTIHARI</h1>
+<body style="background-image: url(./bg.jpg);">
+    <h1 align="center">OUR CITY MOTIHARI</h1>
 
 
 
     <center>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Kesariya-0.jpg" alt="motihar" width="400"
-            style="border: solid black 30px;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Kesariya-0.jpg" alt="motihar" width="400">
     </center>
     <p>
         The topography of Motihari has been described as scenic, with the "stunning beauty" (in classical terms) of Moti
@@ -29,7 +24,7 @@
         broad, large fields…and very few people. There were scattered decrepit hawelis and bungalows, in which
         frightening bhuts, geniis and juraels dwelled.
     </p>
-    <h1 align="center" style="background-color: darkgrey; text-decoration: underline;">ABOUT MOTIHARI</h1>
+    <h1 align="center">ABOUT MOTIHARI</h1>
     <P>First Creation of Champarn District : 1866 On 2nd November 1972 Champaran district was split up Into two
         districts, viz. Purbi Champaran and Paschim Champaran. East Champaran is a part of Tirhut Division. The
         headquarter of Purbi Champaran district is at Motihari .Presently Purbi Champaran consists of Six Subdivisions
@@ -38,17 +33,16 @@
         or Champkatanys. Champa or Champaka means Magnolia and aranya mess forest. Hence, Champaranya means Forest of
         Magnolia (CHAMPA) trees. It is popularly believed that the nomenclature here was made while the vest forest part
         was inhabited by solitary ascetics. It is needless to say that has Purbi means Eastern Side.</P>
-    <h1 align="center" style="background-color: darkgrey;">ORIGIN OF NAME</h1>
+    <h1 align="center">ORIGIN OF NAME</h1>
     <P>The name Champaran was originated from champa – aranya or Champkatanys. Champa or chamka means Mongolia and
         Aranya means mess forest.Champaran means forest of Mongolia (Champa) tree.The nomenclature was made while the
         vast forest part was inhabited by solitary ascetics.Purbi to be means eastern side.
 
         It is believed that the name of this city is inspired by the name of two ancient kings of here, Moti Singh and
         Hari Singh.</P>
-    <h1 align="center" style="background-color: darkgrey; text-decoration: underline;">MAHATMA GANDHI VISIT TO MOTIHARI
-    </h1>
+    <h1 align="center">MAHATMA GANDHI VISIT TO MOTIHARI</h1>
     <center>
-        <img src="./mahatma gandhi.png" alt="mahatma gandhi" width="300" style="border: solid rgb(79, 9, 9) 30px;">
+        <img src="./mahatma gandhi.png" alt="mahatma gandhi" width="300">
     </center>
     <p>It was Champaran that acquainted me with India, Mahatma Gandhi wrote in one of his letters. BAPU Father of our
         nation while his visit to Champaran on request of Raj kumar Shukla (A farmer belonging to land of East
@@ -83,10 +77,9 @@
         Indian National movement. Besides non co-operation movement, demonstration against SIMON commission in year
         1929, gathering in Motihari against the failure of Round table conference to pledge for Indian Independence are
         some more historic events related to this place.</p>
-    <h1 align="center" style="background-color: darkgrey; text-decoration: underline;">SATYAGRAHA MOVEMENT</h1>
+    <h1 align="center">SATYAGRAHA MOVEMENT</h1>
     <center>
-        <img src="./satyagraha movement.png" alt="Satyagraha movement" width="350"
-            style="border: solid rgb(101, 13, 13) 30px;">
+        <img src="./satyagraha movement.png" alt="Satyagraha movement" width="350">
     </center>
     <p>Satyagraha movement was started by
         Mahatma Gandhi from the land of Champaran in Bihar. In April 1917, on the
