--- a/HTML/6TH TASK/index.html
+++ b/HTML/6TH TASK/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 
 <head>
-    <title>Task 4</title>
+    <title>index</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<style></style>
 
-<body style="background-image: url(./bg.jpg);font-weight: bold; font-style: oblique; font-size: larger;">
-    <h1 align="center"
-        style="background-color: darkgrey; text-decoration: underline; padding-top: 50px; padding-bottom: 50px;">OUR
+<body style="background-image: url(./bg.jpg);">
+
+    <nav class=" index ">
+        <a href=" index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTECT</a>
+
+    </nav>
+    <h1 align="center" style="background-color: darkgrey; text-decoration: underline;">OUR
         CITY
         MOTIHARI</h1>
 
