some file deleted

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
         <a href="./HTML/1ST DAY/index.html">Task 1</a>
         <a href="./HTML/2ND TASK/index.html">Task 2</a>
         <a href="./HTML/3RD TASK/index.html">Task 3</a>
+        <a href="./HTML/4TH TASK/index.html">Task 4</a>
+        <a href="./HTML/5TH TASK/index.html">Task 5</a>
+        <a href="./HTML/6TH TASK/index.html">Task 6</a>
+        <a href="./HTML/7TH TASK/index.html">Task 7</a>
+        <a href="./HTML/8TH TASK/index.html">Task 8</a>
+        <a href="./HTML/9TH TASK/index.html">Task 9</a>
+        <a href="./HTML/10TH TASK/div.html">Task 10</a>
+        <a href="./HTML/11TH TASK/form.html">Task 11</a>
+        <a href="./HTML/MINOR PROJECT-1/resumee.html">MINOR PROJECT-1</a>
+        <a href="./HTML/PROJECT-1/index.html">MAJOR PROJECT</a>
+
+
     </div>
 
 
