--- a/index.html
+++ b/index.html
@@ -74,15 +74,14 @@
         <a href="./HTML/2ND TASK/index.html">Task 2</a>
         <a href="./HTML/3RD TASK/index.html">Task 3</a>
         <a href="./HTML/4TH TASK/index.html">Task 4</a>
-        <a href="./HTML/5TH TASK/index.html">Task 5</a>
+        <a href="./HTML/5TH TASK/index.html">Task 5 Minor Project-1</a>
         <a href="./HTML/6TH TASK/index.html">Task 6</a>
-        <a href="./HTML/7TH TASK/index.html">Task 7</a>
-        <a href="./HTML/8TH TASK/index.html">Task 8</a>
-        <a href="./HTML/9TH TASK/index.html">Task 9</a>
-        <a href="./HTML/10TH TASK/div.html">Task 10</a>
-        <a href="./HTML/11TH TASK/form.html">Task 11</a>
-        <a href="./HTML/MINOR PROJECT-1/resumee.html">MINOR PROJECT-1</a>
-        <a href="./HTML/PROJECT-1/index.html">MAJOR PROJECT</a>
+        <a href="./HTML/7TH TASK/task7.html">Task 7</a>
+        <a href="./HTML/8TH TASK/resume.html">Task 8 Minor Project-2</a>
+        <a href="./HTML/9TH TASK/task9.html">Task 9</a>
+        <a href="./HTML/10TH TASK/form.html">Task 10</a>
+        <a href="./HTML/11TH TASK/index.html">Task 11 Minor Project-1</a>
+
 
 
     </div>
