--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
         <a href="./HTML/9TH TASK/task9.html">Task 9</a>
         <a href="./HTML/10TH TASK/form.html">Task 10</a>
         <a href="./HTML/11TH TASK/index.html">Task 11 Minor Project-1</a>
+        <a href="./HTML/12TH TASK/">Task 12</a>
+        <a href="./HTML/13TH TASK/task13.html">Task 13</a>
+        <a href="./HTML/14TH TASK/task14.html">Task 14</a>
+        <a href="./HTML/15TH TASK/task15.html">Task 15</a>
+        <a href="./HTML/16TH TASK/task16.html">Task 16</a>
+        <a href="./HTML/17TH TASK/task17.html">Task 17</a>
+
 
 
 
